objects/Performance_Documentation__c.object
<CustomObject>
    <fields>
        <fullName>Current_RPD__c</fullName>
        <label>Current RPD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Extension_Reason_Other__c</fullName>
        <label>Extension Reason Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extension_Reason__c</fullName>
        <label>Extension Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Attitude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Effort</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Goal_RPD__c</fullName>
        <label>Goal RPD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Goals_Set__c</fullName>
        <label>Goals Set</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Recruiter__c</fullName>
        <formula>Rep__r.Recruiter__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recruiter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Performance_Documentation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Trainer__c</fullName>
        <formula>Rep__r.Traininer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trainer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1_1_Notes__c</fullName>
        <label>1:1 Notes</label>
        <type>TextArea</type>
    </fields>
    <label>Performance Documentation</label>
    <nameField>
        <label>Performance Documentation</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Performance_Documentation</pluralLabel>
    <recordTypes>
        <fullName>Attendence</fullName>
        <active>true</active>
        <label>Attendence</label>
    </recordTypes>
    <recordTypes>
        <fullName>Coaching_Plan</fullName>
        <active>true</active>
        <label>Coaching Plan</label>
    </recordTypes>
    <recordTypes>
        <fullName>PCI</fullName>
        <active>true</active>
        <label>PCI</label>
    </recordTypes>
    <recordTypes>
        <fullName>PIP</fullName>
        <active>true</active>
        <label>PIP</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>